--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0"
   },
   "scripts": {
-      "start": "node ./src/server.js"
-    }
+    "start": "node ./src/server.js"
+  }
 }
